<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" 
	android:padding="10dip"
    android:layout_width="fill_parent" android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="@drawable/default_bg1"
     >
    
    <TextView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dip"
        android:text="@string/username"
    />
    
    <EditText android:id="@+id/userName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:singleLine="true"
        android:password="false"
    />
    
    <TextView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dip"
        android:text="@string/password"
    />
    
    <EditText android:id="@+id/password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:singleLine="true"
        android:password="true"
    /> 
    
     <TextView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dip"
        android:text="@string/password_again"
    />
    
    <EditText android:id="@+id/passwordAgain"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:singleLine="true"
        android:password="true"
    /> 
    
    <TextView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dip"
        android:text="@string/email"
    />
    
    <EditText android:id="@+id/email"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:singleLine="true"
        android:password="false"
    />
    
   <RadioGroup android:id="@+id/gender"
               android:orientation="horizontal"
               android:layout_width="wrap_content" android:layout_height="wrap_content"
               >
               <RadioButton android:text="@string/mail"
                            android:id="@+id/mail"
                            android:checked="true"
                            android:layout_width="wrap_content" 
                            android:layout_height="wrap_content">
               </RadioButton>
               <RadioButton android:text="@string/femail"
                            android:id="@+id/femail"
                            android:layout_width="wrap_content" 
                            android:layout_height="wrap_content">
               </RadioButton>
     
   </RadioGroup>
    
    
    <LinearLayout android:orientation="horizontal"
    			  android:layout_width="fill_parent"
    			  android:layout_height="wrap_content">
			  
    <Button android:id="@+id/signUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
    />
    <Button android:id="@+id/cancel_signUp"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:text="@string/cancel"
    />
	</LinearLayout>

</LinearLayout>




